--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
             <h1>Kanban board</h1>
             <button class="create-column">Add a column</button>
         </div>
-        <div class="column-container"></div>
+        <div class="column-container">
+        	<div class="column archive">
+    			<h2>
+    				Archive
+    			</h2>
+           	</div>
+        </div>
+        </div>
 	</div>
 
     <script src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous">
